--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Le guide pour découvrir le 8ème arrondissement de Lyon"
     />
-    <meta property="og:image" content="../src/asset/Monplaisir" />
+    <meta property="og:image" content="../src/asset/Monplaisir.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
