--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="Le guide pour découvrir le 8ème arrondissement de Lyon"
     />
     <meta property="og:image" content="../src/asset/Monplaisir.jpg" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="314" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
