--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
       name="description"
       content="Le guide pour découvrir le 8ème arrondissement de Lyon"
     />
-    <meta property="og:image" content="../src/asset/Monplaisir.jpg" />
-    <meta property="og:image:width" content="600" />
-    <meta property="og:image:height" content="314" />
+    <meta property="og:image" content="https://www.immobilieredelest.fr/public/files/images/estimation-appartement-lyon-8.jpg" />
+  <meta property="og:image:alt" content="image du quartier Monplaisir" />
+  <meta property="og:image:type" content="image/jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
